Add gettimeofday, sched_setaffinity, sched_getaffinity, malloc, free, get_nproc, get_nproc_conf